# chip8-rust

./: .gitignore  Cargo.toml  LICENSE
src/: display.rs  input.rs  interpreter.rs  lib.rs  main.rs  memory.rs  sound.rs
