[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] } 
#termion = "1.5"
crossterm = "0.22"
beep = "0.3.0"
spin_sleep = "1.0.0"
